# AdvCAD-modernized

./: .gitignore  BACKWARD_DEBUG_PLAN.md  CHANGELOG.md  CLAUDE.md  CMAKE_MIGRATION_PCH_ROBUSTNESS_PLAN.md  DEBUG_LEVEL_SPECIFICATION.md  DEGENERATE_TRIANGLE_FIX_PLAN.md  GIT_STRATEGY.md  GM3D_EDITOR_MANUAL.md  GOOD_PRACTICE.md  GUI_DEVELOPMENT_PLAN.md  GUI_DEVELOPMENT_PLAN_old.md  INSTALL.md  MESH_FAILURE_ANALYSIS_PLAN.md  MODERNIZATION.md  Makefile  PPA_SETUP.md  Pipfile  README  THEORETICAL_MANUAL.md  ZERO_VECTOR_FIX_PLAN.md  advcad_0.13.0-1ubuntu1.debian.tar.xz  advcad_0.13.0-1ubuntu1.dsc  advcad_0.13.0-1ubuntu1.dsc.asc  advcad_0.13.0-1ubuntu1_source.build  advcad_0.13.0-1ubuntu1_source.buildinfo  advcad_0.13.0-1ubuntu1_source.changes  advcad_0.13.0-1ubuntu1_source.ppa.upload  advcad_auto.py  advcad_gpg_public.asc  advcad_gpg_secret.asc  benchmark  benchmark.cpp  build_deb.sh  copyright  create_ppa.sh  debian_official.md  debug_coarse_fixed.pch  debug_minimal.pch  encrypted_message.txt  (+35 more)
.github/workflows/: build-package.yml
WH/: Makefile  afront2d.cc  afront2d.h  bucket.h  bucket2d.h  bucket3d.h  common.cc  common.h  connector2d.cc  connector2d.h  constdel2d.cc  constdel2d.h  constdel2d_inline.cc  coverage.h  debug_levels.cc  debug_levels.h  delaunay2d.cc  delaunay2d.h  delaunay2d_inline.cc  field2d.cc  field2d_inline.cc  field3d.h  field_inline.cc  geometry_analyzer.cc  gm2d.h  gm2d_brep.cc  gm2d_brep.h  gm2d_convert.cc  gm2d_convert.h  gm2d_setop.cc  gm2d_setop.h  gm2d_stitch.cc  gm3d.cc  gm3d.h  gm3d_brep.h  gm3d_brep_edge.cc  gm3d_brep_face.cc  gm3d_brep_vertex.cc  gm3d_convert.h  gm3d_facet.h  (+49 more)
advcad-windows-v0.13.0/: INSTALL-WINDOWS.txt
apps/: README.md  gm3d_autocomplete.py  gm3d_dialogs.py  gm3d_editor.py  gm3d_independent_viewer.py  gm3d_parsers.py  gm3d_syntax.py  gm3d_viewer.py  gm3d_viewer_bad.py  optimize_mesh_size.py
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
build-windows/WH/: Makefile  cmake_install.cmake
build-windows/command/: Makefile  cmake_install.cmake
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/WH/: Makefile  cmake_install.cmake
build_test/command/: Makefile  (+1 more)
clean-source/: CMakeLists.txt  copyright
clean-source/WH/: CMakeLists.txt  afront2d_inline.cc  bucket2d.cc  bucket2d.h  bucket2d_inline.cc  bucket3d.cc  bucket3d_inline.cc  delaunay2d.cc  delaunay3d.cc  delaunay3d.h  field3d.h  gm2d.cc  gm2d_brep.h  gm3d.cc  gm3d_brep.h  gm3d_brep_edge.cc  gm3d_convert.cc  gm3d_facet.cc  gm3d_facet.h  gm3d_facet_seg.cc  gm3d_facet_tri.cc  gm3d_io.h  mg3d_delaunay2d.cc  mg3d_delaunay2d.h  mg3d_delaunay3d.h  polygon3d.h  robust_cdt.cc  robust_cdt.h  segment2d.cc  segment2d.h  segment2d_inline.cc  sorter.cc  sorter_inline.cc  space2d.h  space3d.h  topology3d.h
clean-source/command/: CMakeLists.txt  Makefile
clean-source/debian/: changelog  control  files  rules
command/: advcad  advcad.cc
dev/: README.md  face5_debug_generator.py
docs/: CODEBASE_KNOWLEDGE.md  DEGENERATE_TRIANGLE_FIX_PLAN.md  GOOD_PRACTICE.md  README.md  manual.txt
face5_debug_tests/: 6seg_normal.gm3d  6seg_small.gm3d  6seg_tiny.gm3d  hex_normal.gm3d  hex_small.gm3d  hex_tiny.gm3d
generated_tests/: boundary_test_5e-04.gm3d  boundary_test_5e-05.gm3d  complex_boolean.gm3d  complex_boolean.pch  holed_beam_center.gm3d  holed_beam_center.pch  holed_beam_edge.gm3d  holed_beam_edge.pch  holed_beam_large.gm3d  holed_beam_large.pch  precision_1e3.gm3d  precision_1e3.pch  precision_1e4.gm3d  precision_1e5.gm3d  simple_box_1.gm3d  simple_box_1.pch  simple_box_10.gm3d  simple_box_10.pch
reduced_tests/: cyclic_minimal.gm3d  cyclic_reduced_1.gm3d  cyclic_reduced_2.gm3d
sample/: README  block.gm3d  block.gm3d~  block.pch  block_output.pch  test_1_output.pch  test_2.gm3d  test_4.gm3d  test_5.gm3d  test_5.pch  test_7_output.pch  test_autocomplete.gm3d  test_autocomplete_output.pch
scripts/: PchReader.py  PchWriter.py  README.md  test_all_shaft_models.py
src/: README.md  holed_beam_meshing_tester.py
src/WH/: CMakeLists.txt  afront2d.cc  afront2d.h  afront2d_inline.cc  bucket3d.h  connector.h  constdel2d.cc  coverage.h  delaunay2d.h  field.h  field2d.h  field3d.cc  field3d_inline.cc  geometry_analyzer.h  gm2d_facet.h  gm2d_setop.cc  gm2d_stitch.h  gm3d.cc  gm3d_convert.h  gm3d_setop.h  gm3d_sheetsetop.cc  gm3d_sheetsetop.h  gm3d_stitch.h  inout2d.cc  mg3d_base.h  poly_tpl3d.cc  poly_tpl3d.h  polygon2d.cc  robust_predicates.cc  scalar_inline.cc  space2d_inline.cc  space3d.cc  tetrahedron3d.h  topology3d.cc
stress_tests/: complex_csg_1.gm3d  complex_csg_2.gm3d  complex_csg_3.gm3d  multi_box_1.gm3d  multi_box_2.gm3d  multi_box_3.gm3d  nested_feat_1.gm3d  thin_struct_1.gm3d
tests/: README.md
tmp/: README.md
web-app/: DESIGN_PLAN_MCP.md
(+110 files in other folders)
